--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-<title>My Website</title>
+<title>World of Butterflyer</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -276,12 +276,24 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="about.html">About</a>
+  <a href="index2.html">Dashboard</a>
+</li>
+<li>
+  <a href="A6_2.html">Geospatial</a>
+</li>
+<li>
+  <a href="networks.html">Netwoek</a>
+</li>
+<li>
+  <a href="A5.html">EDA</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="vis.html">Vis</a>
+  <a href="TS-note.html">Note_Time Series</a>
+</li>
+<li>
+  <a href="Statistical Learning Note.html">Note_SL</a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
@@ -292,14 +304,19 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">My Website</h1>
+<h1 class="title toc-ignore">World of Butterflyer</h1>
 
 </div>
 
 
-<p>Hello, Website!</p>
-<p>For more information about simple R Markdown websites, please read the documentation at <a href="https://bookdown.org/yihui/rmarkdown/rmarkdown-site.html" class="uri">https://bookdown.org/yihui/rmarkdown/rmarkdown-site.html</a>.</p>
-<p>Please also note that simple R Markdown sites are <em>not</em> based on <strong>blogdown</strong>. They are probably good for websites with only a few Rmd documents. For larger-scale and more sophisticated websites (such as blogs), you may want to use <strong>blogdown</strong> instead: <a href="https://github.com/rstudio/blogdown" class="uri">https://github.com/rstudio/blogdown</a>.</p>
+<p>Hello, world!</p>
+<p>This is my personal visualization gallery website. The website also containes Mechine leanring note. Feel free to click the link for more detaild.</p>
+<p><a href="index2.html">Dashboard Presentation</a></p>
+<p><a href="A6_2.html">Geospatial PLot and code</a></p>
+<p><a href="networks.html">Netwoek PLot and code</a></p>
+<p><a href="A5.html">EDA</a></p>
+<p><a href="Statistical%20Learning%20Note.html">Statistical Learning Note</a></p>
+<p><a href="TS-note.html">Time Series Note</a></p>
 
 
 
