--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
----
-title: "World of Butterflyer"
----
+
+# World of Butterflyer
+
 
 Hello, world!
 
 This is my personal visualization gallery website.   
+
 The website also containes Mechine leanring note.  
+
 Feel free to click the link for more detaild.   
 
 <style>
