--- a/index.html
+++ b/index.html
@@ -242,8 +242,7 @@ div.container {
 <div class="container">
 <p>
 <p><a href="project.html">Dashboard Presentation</a></p>
-Final project. A study of the U.S. housing market in 2017 the dashboard presents the housing market<br />
-status from multiple dimensions.
+Final project. A study of the U.S. housing market in 2017. Creating interactive plots adn implementing in dashboard, present the housing market status from multiple dimensions. 
 </p>
 </div>
 </div>
@@ -254,7 +253,7 @@ status from multiple dimensions.
 <div class="container">
 <p>
 <p><a href="A6_2.html">Geospatial PLot and code</a></p>
-Practicing project. Creating map image by shp.file with step by step code.
+Practicing project with step by step code. Creating US map image by shp.file. Filling the map by the level of the republican vote rate. 
 </p>
 </div>
 </div>
@@ -265,7 +264,7 @@ Practicing project. Creating map image by shp.file with step by step code.
 <div class="container">
 <p>
 <p><a href="networks.html">Netwoek PLot and code</a></p>
-Practicing project. Creating immigrant network graph with step by step code.
+Practicing project with step by step code. Ploting immigrant network graph. 
 </p>
 </div>
 </div>
@@ -276,7 +275,7 @@ Practicing project. Creating immigrant network graph with step by step code.
 <div class="container">
 <p>
 <p><a href="A5.html">Exploratory Data Analysis</a></p>
-Practicing project. Including bar, time series plot, pie chart and etc.
+Practicing project with step by step code. Exploring the bank accounts and transactions dataset, applied EDA to discover the hidden infomation behaind data. The results are presented by bar plots, time series plots, pie charts and etc.
 </p>
 </div>
 </div>
